--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,7 @@ nav_sites:
     link: "https://www.instagram.com/miczal_/"
     icon: icon-instagram
   -
-    link: "https://www.deviantart.com/miczalpl"
-    icon: icon-deviantart
-  -
-    link: "#"
+    link: "https://www.youtube.com/channel/UC1-vE37Wb2sxfGgXYFsQhjw"
     icon: icon-youtube
 
 # Main content
