--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ nav_sites:
   -
     link: "https://www.youtube.com/channel/UC1-vE37Wb2sxfGgXYFsQhjw"
     icon: icon-yt
+  -
+    link: "https://www.linkedin.com/in/micha%C5%82-urba%C5%84ski-870706174"
+    icon: icon-linkedin
 
 # Main content
 header: Hi.</br>I'm&nbsp;Miczał
