--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ nav_sites:
     icon: icon-yt
   -
     link: "https://www.linkedin.com/in/micha%C5%82-urba%C5%84ski-870706174"
-    icon: icon-linkedin
+    icon: icon-in
 
 # Main content
 header: Hi.</br>I'm&nbsp;Miczał
