--- a/_config.yml
+++ b/_config.yml
@@ -318,9 +318,9 @@ sections:
     paragraph: Many years ago i did some other games. They were games made for one friend who is streamer. This was basically one giant meme.
     images:
       -
-        full: "/assets/img/Bs2_Trailer1"
+        full: "/assets/img/Bs2_Trailer1.webm"
       -
-        full: "/assets/img/Bs2_Trailer2"
+        full: "/assets/img/Bs2_Trailer2.webm"
 
 # Footer content - please edit the _includes/footer.html file.
 
