--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ header: Hi.</br>I'm&nbsp;Miczał
 headerParagraph: Art speaks where words are unable to explain.
 indexParagraph1: I'm an aspiring graphic designer. I do <a href="#drawings">Drawings</a>, <a href="#conceptart">Concept Art</a>, <a href="#posters">Posters</a> and even some <a href="#programming">Programming</a>!
 indexParagraph2: I'm 23 years old, I like to draw, play games and watch stars at night. <(･ω･´)>
+indexParagraph3: I am currently working as a freelancer and programming instructor. In my free time I create my own game - <a href="https://themiczal.github.io/TaleofWitchsHeart/">Tale of Witch's Heart.</a> If you have any questions, you can mail me at <a href="mailto:themiczal@gmail.com">themiczal@gmail.com</a>
 
 # Carousel images paths
 images:
